--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
